k8s/thesis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cd-thesis
  labels:
    istio-injection: "enabled"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cd-thesis
  name: thesis-one
spec:
  selector:
    matchLabels:
      app: thesis-one
  template:
    metadata:
      labels:
        app: thesis-one
    spec:
      containers:
        - name: thesis-one
          image: v3ro/thesis-one
          imagePullPolicy: Always
          resources:
            limits:
              memory: "999Mi"
              cpu: "100m"
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  namespace: cd-thesis
  name: thesis-one
spec:
  type: NodePort
  selector:
    app: thesis-one
  ports:
    - port: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cd-thesis
  name: thesis-two
spec:
  selector:
    matchLabels:
      app: thesis-two
  template:
    metadata:
      labels:
        app: thesis-two
    spec:
      containers:
        - name: thesis-two
          image: v3ro/thesis-two
          imagePullPolicy: Always
          resources:
            limits:
              memory: "999Mi"
              cpu: "100m"
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  namespace: cd-thesis
  name: thesis-two
spec:
  selector:
    app: thesis-two
  ports:
    - port: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cd-thesis
  name: thesis-three
spec:
  selector:
    matchLabels:
      app: thesis-three
  template:
    metadata:
      labels:
        app: thesis-three
    spec:
      containers:
        - name: thesis-three
          image: v3ro/thesis-three
          imagePullPolicy: Always
          resources:
            limits:
              memory: "999Mi"
              cpu: "100m"
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  namespace: cd-thesis
  name: thesis-three
spec:
  selector:
    app: thesis-three
  ports:
    - port: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cd-thesis
  name: thesis-four
spec:
  selector:
    matchLabels:
      app: thesis-four
  template:
    metadata:
      labels:
        app: thesis-four
    spec:
      containers:
        - name: thesis-four
          image: v3ro/thesis-four
          imagePullPolicy: Always
          resources:
            limits:
              memory: "999Mi"
              cpu: "100m"
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  namespace: cd-thesis
  name: thesis-four
spec:
  selector:
    app: thesis-four
  ports:
    - port: 5004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cd-thesis
  name: thesis-five
spec:
  selector:
    matchLabels:
      app: thesis-five
  template:
    metadata:
      labels:
        app: thesis-five
    spec:
      containers:
        - name: thesis-five
          image: v3ro/thesis-five
          imagePullPolicy: Always
          resources:
            limits:
              memory: "999Mi"
              cpu: "100m"
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  namespace: cd-thesis
  name: thesis-five
spec:
  selector:
    app: thesis-five
  ports:
    - port: 5005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: cd-thesis
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thesis-one
                port:
                  number: 5001
